RESOLVED FIXED267438
REGRESSION(268426@main): Caused backdrop filter content to get oddly clipped at the screen edge (120871742)
https://bugs.webkit.org/show_bug.cgi?id=267438
Summary REGRESSION(268426@main): Caused backdrop filter content to get oddly clipped ...
WebKit Commit Bot
Reported 2024-01-11 17:23:29 PST
https://commits.webkit.org/268426@main introduced a regression: Caused backdrop filter content to get oddly clipped at the screen edge (120871742) This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 268426@main (2.04 KB, patch)
2024-01-11 17:23 PST, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2024-01-11 17:23:36 PST
Created attachment 469379 [details] REVERT of 268426@main Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2 2024-01-11 17:27:44 PST
Committed 272949@main (94c40b06fa85): <https://commits.webkit.org/272949@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469379 [details].
Radar WebKit Bug Importer
Comment 3 2024-01-11 17:28:15 PST
Note You need to log in before you can comment on or make changes to this bug.