Cherry-pick 94c40b06fa85. rdar://120871742

Unreviewed, reverting 268426@main.
    https://bugs.webkit.org/show_bug.cgi?id=267438

    Caused backdrop filter content to get oddly clipped at the screen edge (120871742)

    Reverted changeset:

    "Backdrop-filter: blur() with a transparent backdrop renders incorrectly."
    https://bugs.webkit.org/show_bug.cgi?id=176830
    https://commits.webkit.org/268426@main

    Canonical link: https://commits.webkit.org/272949@main

Canonical link: https://commits.webkit.org/272448.191@safari-7618-branch